N/A for hours and removed x-scrollbar bug

--- a/src/pages/categories/Categories.css
+++ b/src/pages/categories/Categories.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+  }
+
 .browse {
     display: flex;
     flex-direction: column;
